--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,10 @@
+[build-system]
+requires = [
+    "setuptools>=60",
+    "setuptools-scm>=8.0"
+]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "imagekit"
 version = "0.2.0"
@@ -16,5 +23,8 @@ dependencies = [
     "scipy==1.11.2",
 ]
 
-[tool.setuptools]
-packages = ["imagekit"]
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.package-data]
+"*" = ["*.*"]
