--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "pillow-heif==0.13.0",
     "pytesseract==0.3.10",
     "scipy==1.11.2",
+    "qrcode==7.4.2",
+    "loguru==0.7.2",
 ]
 
 [tool.setuptools.packages.find]
