--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ authors = [
 dependencies = [
     "numpy==1.25.2",
     "packaging==23.1",
-    "Pillow==10.0.0",
+    "Pillow>=10.0.0",
     "pillow-heif==0.13.0",
     "pytesseract==0.3.10",
     "scipy==1.11.2",
